--- a/configs/rockchip.config
+++ b/configs/rockchip.config
@@ -2,17 +2,17 @@
 CONFIG_TARGET_rockchip=y
 CONFIG_TARGET_rockchip_armv8=y
 CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_fastrhino_r66s=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_fastrhino_r68s=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2c=y
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_fastrhino_r66s is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_fastrhino_r68s is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2c is not set
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2s=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4s=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4se=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5c=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h66k=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h68k=y
-CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h69k=y
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4s is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r4se is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5c is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h66k is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h68k is not set
+# CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h69k is not set
 
 # Set Firmware Size
 CONFIG_TARGET_KERNEL_PARTSIZE=64
