--- a/configs/armv8-mini.config
+++ b/configs/armv8-mini.config
@@ -142,11 +142,11 @@ CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_zsh=y
 
 # H68K AX Mode Support
-CONFIG_DRIVER_11AX_SUPPORT=y
-CONFIG_PACKAGE_kmod-mt7921-common=y
-CONFIG_PACKAGE_kmod-mt7921e=y
-CONFIG_PACKAGE_mt7921bt-firmware=y
-CONFIG_PACKAGE_mt7922bt-firmware=y
+# CONFIG_DRIVER_11AX_SUPPORT is not set
+# CONFIG_PACKAGE_kmod-mt7921-common is not set
+# CONFIG_PACKAGE_kmod-mt7921e is not set
+# CONFIG_PACKAGE_mt7921bt-firmware is not set
+# CONFIG_PACKAGE_mt7922bt-firmware is not set
 
 # Shortcut-Fe
 CONFIG_PACKAGE_kmod-shortcut-fe=y
